2013-10-12  Joseph Myers  <joseph@codesourcery.com>

	* soft-fp/double.h: Indent preprocessor directives inside #if.
	* soft-fp/extended.h: Likewise.
	* soft-fp/op-2.h: Likewise.
	* soft-fp/op-4.h: Likewise.
	* soft-fp/op-common.h: Likewise.
	* soft-fp/quad.h: Likewise.
	* soft-fp/single.h: Likewise.
	* soft-fp/soft-fp.h: Likewise.

2013-10-12   Yuri Chornoivan <yurchor@ukr.net>

	* iconv/iconv_prog.c: Fix typos.
	* stdio-common/psiginfo-data.h: Likewise.

2013-10-12   Reuben Thomas <rrt@sc3d.org>

	[BZ #15764]
	* locale/setlocale.c: Fix typo.

2013-10-12  Joseph Myers  <joseph@codesourcery.com>

	[BZ #16036]
	* soft-fp/unorddf2.c (__unorddf2): Raise "invalid" exception for
	signaling NaN arguments.
	* soft-fp/unordsf2.c (__unordsf2): Likewise.
	* soft-fp/unordtf2.c (__unordtf2): Likewise.

	[BZ #14910]
	* soft-fp/gedf2.c (__gedf2): Raise "invalid" exception for all
	unordered operands.
	* soft-fp/gesf2.c (__gesf2): Likewise.
	* soft-fp/getf2.c (__getf2): Likewise.
	* soft-fp/ledf2.c (__ledf2): Likewise.
	* soft-fp/lesf2.c (__lesf2): Likewise.
	* soft-fp/letf2.c (__letf2): Likewise.

	* soft-fp/eqdf2.c (__eqdf2): Use FP_INIT_EXCEPTIONS.
	* soft-fp/eqsf2.c (__eqsf2): Likewise.
	* soft-fp/eqtf2.c (__eqtf2): Likewise.
	* soft-fp/fixdfdi.c (__fixdfdi): Likewise.
	* soft-fp/fixdfsi.c (__fixdfsi): Likewise.
	* soft-fp/fixdfti.c (__fixdfti): Likewise.
	* soft-fp/fixsfdi.c (__fixsfdi): Likewise.
	* soft-fp/fixsfsi.c (__fixsfsi): Likewise.
	* soft-fp/fixsfti.c (__fixsfti): Likewise.
	* soft-fp/fixtfdi.c (__fixtfdi): Likewise.
	* soft-fp/fixtfsi.c (__fixtfsi): Likewise.
	* soft-fp/fixtfti.c (__fixtfti): Likewise.
	* soft-fp/fixunsdfdi.c (__fixunsdfdi): Likewise.
	* soft-fp/fixunsdfsi.c (__fixunsdfsi): Likewise.
	* soft-fp/fixunsdfti.c (__fixunsdfti): Likewise.
	* soft-fp/fixunssfdi.c (__fixunssfdi): Likewise.
	* soft-fp/fixunssfsi.c (__fixunssfsi): Likewise.
	* soft-fp/fixunssfti.c (__fixunssfti): Likewise.
	* soft-fp/fixunstfdi.c (__fixunstfdi): Likewise.